--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.9",
+    "dayjs": "^1.11.9",
     "formik": "^2.4.4",
     "mobx": "^6.10.2",
     "mobx-react": "^9.0.1",
